--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Welcome to NFC Shopper</h1>
     <p>This is a valid webinos application from Ubiapps</p>
+	<button onclick="nfcRead()">Notify me!</button>
+	<div id="result"></div>
   </body>
 </html>
